--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<img src="https://www.pexels.com/search/dogs/" alt="animal">
 
 </body>
 
