--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<img src="https://www.pexels.com/search/dogs/" alt="animal">
+	<img src="https://www.dreamstime.com/stock-photos-dog-cat-above-white-banner-image5900263" alt="animal">
 
 </body>
 
